--- a/.github/workflows/eleventy_build.yml
+++ b/.github/workflows/eleventy_build.yml
@@ -11,6 +11,6 @@ jobs:
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v1.1.0
         env:
-          PUBLISH_DIR: _site 
-          PUBLISH_BRANCH: gh-pages
+          PUBLISH_DIR: _site
+          PUBLISH_BRANCH: master
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
