--- a/package.json
+++ b/package.json
@@ -4,15 +4,24 @@
   "description": "1. Download and Install [Node.js](https://nodejs.org/en/)",
   "main": "index.js",
   "scripts": {
-    "build": "eleventy build",
-    "forestry:preview": "eleventy build",
-    "watch": "eleventy --watch --serve --port=5500"
+    "watch:sass": "sass --watch _scss/:_site/css",
+    "build:sass": "sass _scss/:_site/css",
+    "build:eleventy": "eleventy build",
+    "forestry:preview": "npm-run-all build:*",
+    "watch:eleventy": "eleventy --watch --serve --port=5500",
+    "start": "npm-run-all build:sass --parallel watch:*",
+    "build": "npm-run-all build:*"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@11ty/eleventy": "^0.12.1"
+    "@11ty/eleventy": "^0.12.1",
+    "@11ty/eleventy-img": "^0.10.0",
+    "@11ty/eleventy-navigation": "^0.3.2",
+    "@11ty/eleventy-plugin-rss": "^1.1.1",
+    "npm-run-all": "^4.1.5",
+    "sass": "^1.42.1"
   },
   "repository": {
     "type": "git",
