--- a/.github/workflows/eleventy_build.yml
+++ b/.github/workflows/eleventy_build.yml
@@ -2,16 +2,16 @@ name: Eleventy Build
 on:
   push:
     tags:        
-      - '*'
+      - '**'
 
 
 jobs:
   build_deploy:
     runs-on: ubuntu-18.04
     steps:
-      steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - name: Set Node
+        uses: actions/setup-node@v3
         with:
           node-version: 14
       - name: Build
