--- a/package.json
+++ b/package.json
@@ -22,14 +22,15 @@
   "license": "ISC",
   "devDependencies": {
     "@11ty/eleventy": "^1.0.1",
-    "@11ty/eleventy-img": "^2.0.0",
+    "@11ty/eleventy-img": "^2.0.1",
     "@11ty/eleventy-navigation": "^0.3.2",
     "@11ty/eleventy-plugin-rss": "^1.1.2",
     "@11ty/eleventy-plugin-syntaxhighlight": "^4.0.0",
     "lodash": "^4.17.21",
     "npm-run-all": "^4.1.5",
     "parcel": "^2.4.1",
-    "sass": "^1.51.0"
+    "sass": "^1.51.0",
+    "sharp": "^0.30.7"
   },
   "repository": {
     "type": "git",
