add images for works withtou

--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "build": "npm-run-all build:*",
     "build:eleventy": "npx @11ty/eleventy",
     "build:sass": "sass src/_scss/:_site/css",
-    "build:js": "parcel build src/_js/*.js --dist-dir _site/js",
+    "build:js": "rm -rf .parcel-cache && parcel build src/_js/*.js --dist-dir _site/js",
     "watch:sass": "sass --watch src/_scss/:_site/css",
-    "watch:js": "parcel watch src/_js/*.js --dist-dir _site/js",
+    "watch:js": "rm -rf .parcel-cache && parcel watch src/_js/*.js --dist-dir _site/js",
     "watch:eleventy": "npx @11ty/eleventy --watch",
     "serve:eleventy": "npx @11ty/eleventy --serve",
     "start:eleventy": "npx @11ty/eleventy --serve",
